<resources>
    <string name="app_name">金山云客服</string>
    <string name="message">消息</string>
    <string name="knowledge_library">知识库</string>
    <string name="custom_service">客服</string>
    <string name="customer_service">客户服务</string>
    <string name="custom_line">客服电话</string>
    <string name="custom_online">客服在线</string>
    <string name="problem_feedback">问题反馈</string>
    <string name="setting">设置</string>
    <string name="search">搜索</string>
    <string name="search_null">对不起，您搜索的问题为空，可以换个试试！</string>
    <string name="search_hint">搜索问题关键字</string>
    <string name="clear_cache_success">清除缓存成功</string>
    <string name="dialog_confirm">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="problem_tech">技术问题</string>
    <string name="problem_business">商务问题</string>
    <string name="problem_record">备案问题</string>
    <string name="problem_other">其他问题</string>
    <string name="ksyun_custom_service">金山云客服</string>
    <string name="exit_app">再按一次返回键退出程序</string>
    <string name="input_problem_content">请详细输入您的问题...</string>
    <string name="problem_desc">问题描述：</string>
    <string name="company_name">企业名称：</string>
   <!-- &#160;&#160;&#160;&#160;-->
    <string name="name">尊姓大名：</string>
    <string name="customer_name">客户姓名：</string>
    <string name="tel">联系电话：</string>
    <string name="email">邮箱地址：</string>
    <string name="problem_kind">问题类型</string>
    <string name="problem_kind_feedback">问题类型：</string>
    <string name="consult_type">咨询类型：</string>
    <string name="product_type">产品类型：</string>
    <string name="other">其它</string>
    <string name="submit">提交</string>
    <string name="internet_fail_connect">无网络服务，请连接</string>
    <string name="resolved">已解决</string>
    <string name="no_resolved">未解决</string>
    <string name="contact_cs">联系客服</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登录</string>
    <string name="exit_login">退出登录</string>
    <string name="login_exception">您可能登录太频繁，请稍后再试！</string>
    <string name="username_password_error">用户名或密码错误，请您重新输入！</string>
    <string name="message_detail">消息详情</string>
    <string name="dear">亲爱的</string>
    <string name="hello">，您好！</string>
    <string name="feedback_success">您的反馈我们已收到，我们会尽快回复您，感谢支持！</string>
    <string name="feedback_null">请先输入您要反馈的内容！</string>
    <string name="feedback_short">您太惜字如金，详细描述会让我们帮您更好地解决问题！</string>
    <string name="email_title">APP在线问题提交</string>
    <string name="loading">正在拼命加载...</string>
    <string name="business">商务</string>
    <string name="techonology">技术</string>
    <string name="record">备案</string>

</resources>
