<?xml version="1.0" encoding="utf-8"?>
<com.ksyun.customservice.custom.CustomRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dc353b"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/feedback_title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@mipmap/left_arrow_icon"
            android:onClick="finishActivity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/knowledge_library"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@id/feedback_title_layout"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/color_dc353b"
                android:textSize="18sp" />

            <View
                android:id="@+id/divider"
                style="@style/horizontal_divider"
                 />

            <TextView
                android:id="@+id/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/black_99"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/praise_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textColor="@color/black_99"
                android:textSize="18sp"
                android:text="@string/no_resolved"
                android:visibility="gone"
                android:layout_alignParentRight="true"
                android:drawableLeft="@mipmap/praise_no" />
            <TextView
                android:id="@+id/praise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer"
                android:padding="20dp"
                android:textColor="@color/black_99"
                android:layout_marginRight="100dp"
                android:textSize="18sp"
                android:text="@string/resolved"
                android:visibility="gone"
                android:layout_alignParentRight="true"
                android:drawableLeft="@mipmap/praise" />
            <View
                android:id="@+id/divider2"
                style="@style/horizontal_divider"
                 />
            <Button
                android:id="@+id/contact_cs"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@drawable/login_bg_selector"
                android:onClick="skipToMessageActivity"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="8dp"
                android:text="@string/contact_cs"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</com.ksyun.customservice.custom.CustomRelativeLayout>